Add calculation of monthly payment; fix some bugs
