# Conveyor/src/main/java/ru/zentsova/conveyor/advices/GlobalExceptionHandler.java
@@ -4,7 +4,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
-import ru.zentsova.conveyor.util.exceptions.ApplicationError;
+import ru.zentsova.conveyor.model.ApplicationError;
 import ru.zentsova.conveyor.util.exceptions.ApplicationException;
 
 /**
@@ -14,6 +14,6 @@ import ru.zentsova.conveyor.util.exceptions.ApplicationException;
 public class GlobalExceptionHandler {
     @ExceptionHandler(ApplicationException.class)
     public ResponseEntity<ApplicationError> handle(ApplicationException ex) {
-        return new ResponseEntity<>(new ApplicationError(HttpStatus.CONFLICT.value(), ex.getMessage()), HttpStatus.BAD_REQUEST);
+        return new ResponseEntity<>(new ApplicationError().statusCode(HttpStatus.BAD_REQUEST.value()).message(ex.getMessage()), HttpStatus.BAD_REQUEST);
     }
 }
