# Conveyor/src/main/java/ru/zentsova/conveyor/controllers/ConveyorController.java
@@ -1,33 +1,29 @@
 package ru.zentsova.conveyor.controllers;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.RestController;
 import ru.zentsova.conveyor.api.ConveyorApi;
-import ru.zentsova.conveyor.model.LoanApplicationRequestDTO;
-import ru.zentsova.conveyor.model.LoanOfferDTO;
-import ru.zentsova.conveyor.util.validator.LoanApplicationRequestDTOValidator;
+import ru.zentsova.conveyor.model.LoanApplicationRequestDto;
+import ru.zentsova.conveyor.model.LoanOfferDto;
+import ru.zentsova.conveyor.services.ConveyorService;
 
-import java.math.BigDecimal;
 import java.util.List;
 
 /**
  * Class ConveyorController
  */
 @RestController
+@RequiredArgsConstructor
 public class ConveyorController implements ConveyorApi {
 
-    @Override
-    public ResponseEntity<List<LoanOfferDTO>> getAllPossibleOffers(LoanApplicationRequestDTO loanApplicationRequestDTO) {
-        LoanApplicationRequestDTOValidator.validate(loanApplicationRequestDTO);
+    private final ConveyorService conveyorService;
 
-        LoanOfferDTO loanOfferDTO1 = new LoanOfferDTO().applicationId(1L).term(180).totalAmount(BigDecimal.valueOf(1500000.00))
-                .isInsuranceEnabled(true).isSalaryClient(true).rate(BigDecimal.valueOf(10.4)).requestedAmount(BigDecimal.valueOf(1700000.00));
-        LoanOfferDTO loanOfferDTO2 = new LoanOfferDTO().applicationId(1L).term(200).totalAmount(BigDecimal.valueOf(1500000.00))
-                .isInsuranceEnabled(true).isSalaryClient(false).rate(BigDecimal.valueOf(11.7)).requestedAmount(BigDecimal.valueOf(1700000.00));
-        return new ResponseEntity<>(List.of(loanOfferDTO1, loanOfferDTO2), HttpStatus.OK);
+    @Override
+    public ResponseEntity<List<LoanOfferDto>> getAllPossibleOffers(LoanApplicationRequestDto loanApplicationRequestDTO) {
+        List<LoanOfferDto> offers = conveyorService.getAllPossibleOffers(loanApplicationRequestDTO);
+        return new ResponseEntity<>(offers, HttpStatus.OK);
     }
 
 }
